--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@azure/identity": "^1.4.0",
+    "@azure/keyvault-secrets": "^4.7.0",
+    "dotenv": "^16.3.1"
   }
 }
